# rtpowerflow

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  Dockerfile  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  start_netzsim.bat  stop_netzsim.bat
.claude/: launch.json
benchmarks/: check_env.py  make_fixtures.py  make_report.py  netzsim_runner.py  plots.py  requirements.txt  run_all.py  run_matpower.py  run_matpower_g.py  run_opendss.py  to_dss.py
data/: DATASET.md  awattar_prices.json  generation.json  grid_library.json  grid_structure.json  lines.json  load.json  real_pv_days.json  substation.json
docs/: API.md  ARCHITECTURE.md  BENCHMARKS.md  Benutzerhandbuch.tex  DING0_GENERATION.md  DING0_POSTGRES_SETUP.md  EXTERNAL_NODES.md  GRIDGEN_EXTRACTION.md  UI_ARCHITECTURE.md  VERTIKALE_INTEGRATION.md
scripts/: build_grid_library.py  build_lpg_library.py  build_lv_osm_grids.py  ext_feed.py  fetch_awattar.py  fetch_real_pv.py  gen_api_doc.py  generate_ding0_grid.py  generate_sample_data.py  import_grid.py  pick_ports.ps1
tests/: README.md  test_api_surface.py  test_api_validation.py  test_benchmark_fixtures.py  test_cells.py  test_controller.py  test_controller_vertical.py  test_der.py  test_ding0_import.py  test_district_import.py  test_echeck.py  test_estimation.py  test_exporter.py  test_ext.py  test_grid_import.py  test_gridedit_mv.py  test_hierarchical_estimation.py  test_loadgen.py  test_lv_ref.py  test_measurements.py  test_osm_lv.py  test_recorder.py  test_reference_import.py  test_ront.py  test_runtime_swap.py  test_sweeps.py  (+4 more)
(+220 files in other folders)
