[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "netzsim"
version = "0.1.0"
description = "Lightweight realtime power-flow time-series simulation built on pandapower"
requires-python = ">=3.10"
dependencies = [
    "pandapower>=3.0,<4",
    "numpy>=1.24",
    "pandas>=2.0",
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "pydantic>=2.6",
    "pydantic-settings>=2.2",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "httpx>=0.27"]

[project.scripts]
netzsim = "netzsim.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
